--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
   <title>Gana Más Clientes - Hispanic digital marketing agency.</title>
   <meta name="Description" content="Gana Más Clientes es una agencia digital de marketing para negocios hispanos en Estados Unidos.">
   <meta property='og:title' content="Gana Más Clientes es una agencia digital de marketing para negocios hispanos en Estados Unidos.">
+  <meta property="og:type" content="website">
+  <meta property='og:url' content="https://ganamasclientes.digital">
+  <meta property="og:image" content="https://ganamasclientes.digital/assets/img/logo.png">
+
   <meta name='twitter:title' content="Gana Más Clientes">
   <meta name="twitter:creator" content="@GanaMasClientes">
-  <meta property='og:url' content="https://ganamasclientes.digital">
   <meta name='twitter:url' content="https://ganamasclientes.digital">
-  <link rel='canonical' href="https://ganamasclientes.digital">
 
+  <link rel='canonical' href="https://ganamasclientes.digital">
   <link rel="dns-prefetch" href="http://fonts.googleapis.com">
   <link rel="dns-prefetch" href="http://apis.google.com">
   <link rel="dns-prefetch" href="http://www.google-analytics.com">
@@ -44,5 +47,5 @@
     ga('create', 'UA-162662887-1', 'auto');
     ga('send', 'pageview');
   </script>
-<script src="runtime-es2015.c9afb3256f2870e161de.js" type="module"></script><script src="runtime-es5.c9afb3256f2870e161de.js" nomodule defer></script><script src="polyfills-es5.1663c9b225ec8a3da61e.js" nomodule defer></script><script src="polyfills-es2015.e61fce6a05533b6e4621.js" type="module"></script><script src="main-es2015.0671c99feaa4e7e593b4.js" type="module"></script><script src="main-es5.0671c99feaa4e7e593b4.js" nomodule defer></script></body>
+<script src="runtime-es2015.c9afb3256f2870e161de.js" type="module"></script><script src="runtime-es5.c9afb3256f2870e161de.js" nomodule defer></script><script src="polyfills-es5.1663c9b225ec8a3da61e.js" nomodule defer></script><script src="polyfills-es2015.e61fce6a05533b6e4621.js" type="module"></script><script src="main-es2015.d0769085b5d27c3b8b73.js" type="module"></script><script src="main-es5.d0769085b5d27c3b8b73.js" nomodule defer></script></body>
 </html>
