--- a/index.html
+++ b/index.html
@@ -63,5 +63,12 @@
   <noscript><img height="1" width="1" style="display:none"
     src="https://www.facebook.com/tr?id=213284069942304&ev=PageView&noscript=1"
   /></noscript>
-<script src="runtime-es2015.c9afb3256f2870e161de.js" type="module"></script><script src="runtime-es5.c9afb3256f2870e161de.js" nomodule defer></script><script src="polyfills-es5.1663c9b225ec8a3da61e.js" nomodule defer></script><script src="polyfills-es2015.e61fce6a05533b6e4621.js" type="module"></script><script src="main-es2015.a01091cd0bbcb7b6c6bd.js" type="module"></script><script src="main-es5.a01091cd0bbcb7b6c6bd.js" nomodule defer></script></body>
+  <!-- Omnisend Email Code -->
+  <script type="text/javascript">
+    window.omnisend = window.omnisend || [];
+    omnisend.push(["accountID", "5e8b70ac4c7fa47be74d497b"]);
+    omnisend.push(["track", "$pageViewed"]);
+    !function(){var e=document.createElement("script");e.type="text/javascript",e.async=!0,e.src="https://omnisrc.com/inshop/launcher-v2.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}();
+  </script>
+<script src="runtime-es2015.c9afb3256f2870e161de.js" type="module"></script><script src="runtime-es5.c9afb3256f2870e161de.js" nomodule defer></script><script src="polyfills-es5.1663c9b225ec8a3da61e.js" nomodule defer></script><script src="polyfills-es2015.e61fce6a05533b6e4621.js" type="module"></script><script src="main-es2015.55b7e2d708168b7137f3.js" type="module"></script><script src="main-es5.55b7e2d708168b7137f3.js" nomodule defer></script></body>
 </html>
